--- a/home.css
+++ b/home.css
@@ -1,25 +1,100 @@
-/* Reset some default styles */
 body, h1, h2, p {
     margin: 0;
     padding: 0;
 }
 
-/* Styling for the "NORMAL" heading */
 #risk {
     color: green;
     text-align: center;
-    margin-top: 20px;
-    font-size: 100px;
+    font-size: 60px;
+    display: inline-block;
+    margin-right: 20px;
 }
 
-/* Define a container to hold the content */
+#bh-line {
+    position: absolute;
+    top: 0;
+    right: -1.5px; /* Adjusted to place the line on the right side */
+    height: 80%;
+    width: 1.5px;
+    background-color: #000;
+}
+
+#details {
+    margin-left: 100px;
+}
+
+ul {
+    position: relative;
+    list-style-type: none;
+    padding: 10px;
+}
+
+ul li {
+    width: 70%;
+    margin-bottom: 5px;
+    padding: 5px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #f5f5f5;
+}
+ul li:hover{
+    background-color: #d0d1d2;
+}
+.bstauts {
+    display: flex;
+    border: 1.2px solid black;
+    margin-left: 40px;
+    margin-top: 10px;
+    padding: 10px;
+    width: 35%;
+    border-radius: 10px;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+    justify-items: center;
+    align-items: center;
+
+}
+
+#bh {
+    display: flex;
+    align-items: center;
+    border-right: 1px solid black;
+}
+
+#risk {
+    color: green;
+    text-align: center;
+    font-size: 60px;
+    margin-right: 20px;
+}
+
+#details {
+    margin-left: 70px;
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+ul li {
+    margin-bottom: 5px;
+    padding: 10px;
+    width: 100%;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: #f5f5f5;
+}
+
+
+
+
 .container {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
 }
 
-/* Header styles */
 header {
     background-color: #4d5053;
     color: #fff;
@@ -27,55 +102,63 @@ header {
     padding: 20px;
 }
 
-h1 {
-    font-size: 36px;
-}
-
-/* Status section styles */
 .status-section {
+    display: inline-block;
     display: flex;
     justify-content: space-around;
-    align-items: flex-start; /* Changed from "normal" to "flex-start" */
+    align-items: flex-start; 
     margin: 20px;
 }
 
-/* Styling for each instrument section */
-.temp, .ele, .ala {
-    height: 200px;
+.temp{
+    height: 280px;
     width: 350px;
     text-align: center;
-    margin: 10px;
-    padding: 20px;
     border: 1px solid #292626;
-    border-radius: 1px;
+    border-radius: 10px;
+}
+.temp:hover{
+    
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+.thed{
+    font-size: 20px;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    height: 50px;
+    display: inline-block;
+    display: flex;
+    background-color: black;
+    color: white;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    justify-content: center;
+}
+.ele:hover{
+    
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+.ala:hover{
+    
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
 }
 .ele{
-    height: 200px;
+    height: 280px;
     width: 350px;
     text-align: center;
-    margin: 10px;
-    padding: 20px;
     border: 1px solid #292626;
-    border-radius: 1px;
+    border-radius: 10px;
+    
 }
 .ala {
-    height: 200px;
+    height: 280px;
     width: 350px;
     text-align: center;
-    margin: 10px;
-    padding: 20px;
     border: 1px solid #292626;
-    border-radius: 1px;
+    border-radius: 10px;
 }
 
 
 
-h2 {
-    font-size: 24px;
-    margin-bottom: 10px;
-}
-
-/* Styling for the status text */
 .status {
     font-size: 18px;
 }
@@ -88,17 +171,12 @@ h2 {
     color: red;
 }
 
-
-
-
-
-/* Footer styles */
 footer {
     background-color: #333;
     color: #fff;
     text-align: center;
     padding: 10px;
-    margin-top: 500px; /* Push the footer to the bottom */
+    margin-top: 500px; 
 }
 #prbo{
     font-family: Georgia, 'Times New Roman', Times, serif;
@@ -111,4 +189,63 @@ footer {
     display: flex;
     justify-content: flex-start;
     margin-left: 200px;
+    
+}
+.tragedy img {
+    max-width: 100%;
+    border: 2px solid #e9e6e6; 
+}
+
+.login-button button {
+    background-color: #007bff; 
+    color: #fff; 
+    padding: 10px 20px; 
+    border: none; 
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    align-self: flex-end; 
+    border-radius: 3px;
+    float: right;
+    margin-top: 10px; 
+    margin-right: 40px; 
+}
+.login-button button:hover {
+    background-color: #0056b3; /* Change the button background color on hover */
+}
+.more img {
+    display: block;
+    margin: 0 auto;
+    border: 2px solid #fff; /* Add a white border around the image */
+  
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); /* Add a subtle box shadow for depth */
+    transition: transform 0.2s ease-in-out; /* Add a smooth hover effect */
+}
+
+/* On hover, scale the image slightly */
+.more img:hover {
+    transform: scale(1.05);
+    border-radius: 7px; /* Add border radius for rounded corners */
+}
+
+#message-at-pt {
+    font-family: Alta;
+    font-size: 16px; 
+    text-align: center;
+
+}
+
+.tragedy {
+    max-width: 400px;
+    margin: 40 auto;
+    padding: 20px; 
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    display: inline-block;
+    marker-start: 20px;
+    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+}
+.extra{
+    display: flex;
+    justify-content:center;
+    gap: 60px;
 }
