--- a/home.css
+++ b/home.css
@@ -2,49 +2,15 @@ body, h1, h2, p {
     margin: 0;
     padding: 0;
 }
-
-#risk {
-    color: green;
-    text-align: center;
-    font-size: 60px;
-    display: inline-block;
-    margin-right: 20px;
-}
-
-#bh-line {
-    position: absolute;
-    top: 0;
-    right: -1.5px; /* Adjusted to place the line on the right side */
-    height: 80%;
-    width: 1.5px;
-    background-color: #000;
-}
-
-#details {
-    margin-left: 100px;
-}
-
-ul {
-    position: relative;
-    list-style-type: none;
-    padding: 10px;
-}
-
-ul li {
-    width: 70%;
-    margin-bottom: 5px;
-    padding: 5px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #f5f5f5;
-}
-ul li:hover{
-    background-color: #d0d1d2;
-}
+a {
+    text-decoration: none;
+    color: #030303; /* Optionally, you can set the link color */
+  }
+  
+  
 .bstauts {
-    display: flex;
     border: 1.2px solid black;
-    margin-left: 40px;
+    margin-left: 50px;
     margin-top: 10px;
     padding: 10px;
     width: 35%;
@@ -52,40 +18,31 @@ ul li:hover{
     box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
     justify-items: center;
     align-items: center;
-
 }
-
-#bh {
-    display: flex;
-    align-items: center;
-    border-right: 1px solid black;
-}
-
 #risk {
     color: green;
     text-align: center;
     font-size: 60px;
+    display: inline-block;
     margin-right: 20px;
 }
-
-#details {
-    margin-left: 70px;
-}
-
-ul {
-    list-style-type: none;
-    padding: 0;
-}
-
 ul li {
+    width: 70%;
     margin-bottom: 5px;
-    padding: 10px;
-    width: 100%;
+    padding: 5px;
     border: 1px solid #ccc;
     border-radius: 5px;
     background-color: #f5f5f5;
+    text-decoration: none;
 }
-
+ul {
+    position: relative;
+    list-style-type: none;
+    padding: 10px;
+}
+ul li:hover{
+    background-color: #d0d1d2;
+}
 
 
 
@@ -156,7 +113,9 @@ header {
     border: 1px solid #292626;
     border-radius: 10px;
 }
-
+li{
+    text-decoration: none;
+}
 
 
 .status {
